// $Id: CHANGELOG.txt,v 1.1.2.11 2008/08/23 20:24:14 boombatower Exp $

SimpleTest 6.x-2.3, xxxx-xx-xx (development version)
------------------------------
- Backports:
    * #297869: Add xpath method to SimpleTest.
    * #297894: Add assertLink and assertNoLink to SimpleTest.

SimpleTest 6.x-2.2, 2008-08-15
------------------------------
- Bugs:
    * #292062: fixed role creation permission check for 6.x style.
- Backports:
    * #290316: test_id field name corrected.
    * #293500: change message field to type text.
    * #268063: added instruction in INSTALL.txt about hidden property.
    * #291750: remove results after displayed.
- Changes:
    * #295001: clarified INSTALL.txt and installation requirements message.
    * Updated README.txt with issue information.

SimpleTest 6.x-2.1, 2008-08-05
------------------------------
- Complete backport of Drupal 7.x SimpleTest module.