@@ -1,10 +1,11 @@
-// $Id: CHANGELOG.txt,v 1.1.2.11 2008/08/23 20:24:14 boombatower Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.12 2008/08/23 20:25:29 boombatower Exp $
 
 SimpleTest 6.x-2.3, xxxx-xx-xx (development version)
 ------------------------------
 - Backports:
     * #297869: Add xpath method to SimpleTest.
     * #297894: Add assertLink and assertNoLink to SimpleTest.
+    * #298137: drupalCreateContentType() should reset node permissions.
 
 SimpleTest 6.x-2.2, 2008-08-15
 ------------------------------
